# professional_RAG_assistant

./: README.md  app.py  evaluate_auditor.py  ingestion.py  pyproject.toml  requirements.txt  retrieval.py
